# XOblivion

./: CMakeLists.txt  build.sh  compile_shaders.sh  post_compilation.sh  rebuild.sh
Resources/: YBC7302.mtl
src/: Game.cpp  Game.h  main.cpp
src/Common/: CountParameters.h  HasMethod.h  ISingletone.h  Oblivion.cpp  Oblivion.h  exceptions.h  platform.h
src/Core/: HighResolutionTimer.cpp  HighResolutionTimer.h  Input.h  Window.h
src/Gameplay/: FirstPersonCamera.cpp  FirstPersonCamera.h
src/Gameplay/Interfaces/: ICamera.h
src/Graphics/: Model.cpp  Model.h  UIOverlay.cpp  UIOverlay.h  VulkanDebug.cpp  VulkanDebug.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Graphics/Interfaces/: IFrameDependent.h  IGraphicsObject.cpp  IGraphicsObject.h  IGraphicsPipeline.h  IGraphicsScene.h  IPipelineLayout.h
src/Graphics/Pipeline/: SimplePipeline.h
src/Graphics/Pipeline/Layout/: TextureLayout.cpp  TextureLayout.h  UIOverlayLayout.cpp  UIOverlayLayout.h
src/Graphics/Utils/: BufferUtils.cpp  BufferUtils.h  Image.cpp  Image.h  ObjLoader.cpp  ObjLoader.h  OneTimeCommandBuffers.h  Samplers.cpp  Samplers.h  Shader.cpp  Shader.h  VulkanAllocators.cpp  VulkanAllocators.h  VulkanObjects.h  stbImage.cpp
src/Graphics/Vertex/: PositionColorNormalVertex.h  PositionColorVertex.h  PositionVertex.h
src/Scenes/: SimpleScene.cpp  SimpleScene.h
src/Shaders/: basic.frag  basic.vert  uioverlay.frag  uioverlay.vert
